--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,4 +7,18 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   body
+    nav.top-bar [role="navigation" data-topbar]
+      ul.title-area
+        li.name
+          h1= link_to "ThunderFlow", root_path
+      section.top-bar-section
+        ul.right
+          - if user_signed_in?
+            li: a[href="#"]= current_user.email
+            li= link_to "Sign Out", destroy_user_session_path, method: :delete
+          - else
+            li= link_to "Sign In", new_user_session_path
+
+    p.notice= notice
+    p.alert= alert
     == yield
