--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,5 +14,6 @@ html
     header
       == render 'layouts/navigation'
     .row[role="main"]
-      == render 'layouts/messages'
+      .flash
+        == render 'layouts/messages'
       == yield
