User can edit answer

--- a/app/views/questions/_answers.html.slim
+++ b/app/views/questions/_answers.html.slim
@@ -1,9 +1,3 @@
 - @answers.each do |answer|
   - unless answer.new_record?
-    .answer
-      .answer_text
-        = fa_icon "check" if answer.is_accepted?
-        = answer.text
-        - if current_user == @question.user
-          - unless @question.answers.accepted.count > 0
-            = button_to "Accept", accept_answer_path(answer), {method: 'post', remote: true}
+    = render 'questions/answer', answer: answer
