--- a/app/assets/stylesheets/answers.css.scss
+++ b/app/assets/stylesheets/answers.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the answers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.answers {
+  .answer {
+    padding-top: 10px;
+    padding-left: 10px;
+    border-bottom: solid #F7F7F7 1px;
+  }
+}
