--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the Questions controller here.
 // They will automatically be included in application.css.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+// Place all the styles related to the answers controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
+.questions {
+  .question {
+    padding-top: 10px;
+    padding-left: 10px;
+    border-bottom: solid #F7F7F7 1px;
+  }
+}
