--- a/app/views/answers/update.js.erb
+++ b/app/views/answers/update.js.erb
@@ -1,7 +1,8 @@
+$('.flash').html('<%= j render 'layouts/messages' %>');
 <% if @answer.errors.present? %>
     $('.answer-form-<%= @answer.id %>').replaceWith('<%= j render 'questions/answer_form', answer: @answer %>')
 <% else %>
     $('.answer-<%= @answer.id %>')
             .replaceWith('<%= j render 'questions/answer', answer: @answer %>')
-    $('.answers').trigger('answer:updated', ['<%= @answer.id %>']);
+    $('.answers').trigger('answer:updated', [<%= @answer.id %>]);
 <% end %>
