User can attach file to question

--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -2,4 +2,6 @@
   = f.error_notification
   = f.input :title
   = f.input :text
+  = f.simple_fields_for :attachments do |attachments_form|
+    = attachments_form.input :file, as: :file
   = f.button :submit, class: "button small"
