Refactoring of models and controllers
- Refactor questions and answers controllers
- Refactor Answer#accept and add tests
- Refactor tests for answers

--- a/app/views/questions/destroy.js.erb
+++ b/app/views/questions/destroy.js.erb
@@ -1,2 +1,2 @@
 $('.flash').html('<%= j render 'layouts/messages' %>')
-$('.question-<%= @question_id %>').remove()
+$('.question-<%= @question.id %>').remove()
