--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -22,6 +22,8 @@ hr
       =simple_form_for [@question, @answer], remote: true do |f|
         = f.error_notification
         = f.input :text
+        = f.simple_fields_for :attachments do |attachments_form|
+          = attachments_form.input :file, as: :file
         = f.button :submit, class: "button small"
 - else
   .row: .small-12.columns.text-center
