Caches attachments on form validation errors

--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -3,7 +3,11 @@
   = f.input :title
   = f.input :text
   = f.simple_fields_for :attachments do |attachments_form|
-    = attachments_form.input :file, as: :file
+    - unless attachments_form.object.file.path.blank?
+      = attachments_form.object.file.identifier
+    - else
+      = attachments_form.input :file, as: :file
+    = attachments_form.hidden_field :file_cache
     = attachments_form.link_to_remove 'Remove this attachment'
   = f.link_to_add 'Add a file', :attachments
   = f.button :submit, class: 'button small'
