--- a/app/views/questions/_answer_form.html.slim
+++ b/app/views/questions/_answer_form.html.slim
@@ -1,5 +1,18 @@
 div class="columns small-12 answer-form-#{answer.id} #{'hide' unless answer.errors.present?}"
-  = simple_form_for answer, remote: true do |f|
+  = simple_nested_form_for answer, remote: true do |f|
     = f.error_notification
     = f.input :text
+    .row
+      div class="columns small-10" id="attachments-answer-#{answer.id}"
+        = f.simple_fields_for :attachments do |attachments_form|
+          - unless attachments_form.object.file.path.blank?
+            = attachments_form.object.file.identifier
+          - else
+            = attachments_form.input :file, as: :file
+          = attachments_form.hidden_field :file_cache
+          p
+            = attachments_form.link_to_remove 'Remove this attachment'
+          hr
+      .columns.small-2.text-right
+        = f.link_to_add 'Add a file', :attachments, data: { target: "attachments-answer-#{answer.id}"}, class: 'button tiny'
     = f.button :submit, class: "button small"
