Refactor Questions to responders

--- a/app/views/questions/_new_answer_form.html.slim
+++ b/app/views/questions/_new_answer_form.html.slim
@@ -14,4 +14,4 @@
         hr
     .columns.small-2.text-right
       = f.link_to_add 'Add a file', :attachments, data: { target: '#attachments'}, class: 'button tiny'
-  = f.button :submit, class: "button small"
+  = f.button :submit, class: 'button small'
