--- a/app/views/questions/_answers.html.slim
+++ b/app/views/questions/_answers.html.slim
@@ -1,3 +1,3 @@
-- @answers.each do |answer|
+- @question.answers.each do |answer|
   - unless answer.new_record?
     = render 'questions/answer', answer: answer
