--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,9 +1,14 @@
 $('.flash').html('<%= j render 'layouts/messages' %>');
 
 <% if @answer.errors.present? %>
-$('#new_answer').replaceWith('<%= j render 'questions/new_answer_form', answer: @answer, question: @question %>')
+$('#new_answer').replaceWith('<%= j render 'questions/new_answer_form', layout: false, answer: @answer, question: @question %>');
 <% else %>
+$('#new_answer').replaceWith('<%= j render 'questions/new_answer_form', layout: false, answer: Answer.new, question: @question %>');
+$('#new_answer').trigger("reset");
+
+<% publish_to "/questions/#{@question.id}/answers" do %>
 $('.answers').append('<%= j render 'questions/answer', answer: @answer %>');
 $('.answers').trigger('answer:updated', [<%= @answer.id %>]);
-$('#new_answer').trigger("reset");
+<% end %>
+
 <% end %>
