--- a/app/views/questions/_answer.html.slim
+++ b/app/views/questions/_answer.html.slim
@@ -12,8 +12,8 @@ div[class="row answer answer-#{answer.id}"]
     - if current_user == answer.user
       a href="#" class="answer-edit button radius tiny" data-answer-id="#{answer.id}" Edit answer
       = link_to 'Delete answer', answer_path(answer), {remote: true, method: 'delete', class: 'button tiny radius'}
-    - if current_user == @question.user
-      - unless @question.answers.accepted.count > 0
+    - if current_user == answer.question.user
+      - unless answer.question.has_accepted_answers?
         = button_to 'Accept', accept_answer_path(answer), {method: 'post', remote: true, class: 'button tiny radius'}
   div class="columns small-12 answer-form-#{answer.id} #{'hide' unless answer.errors.present?}"
     = render 'questions/answer_form', answer: answer
