--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,4 +1,4 @@
-.row
+.row.question data={id: "#{@question.id}", user_id: "#{@question.user_id}"}
   .small-12.columns
     h2.question-title= @question.title
     .question-text= @question.text
