--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,11 +8,11 @@ html
     == stylesheet_link_tag "application", :media => 'all', 'data-turbolinks-track' => true
     / Modernizr is required for Zurb Foundation
     == javascript_include_tag 'vendor/modernizr'
-    == javascript_include_tag 'application', 'data-turbolinks-track' => true
+    == javascript_include_tag 'application', controller_name, 'data-turbolinks-track' => true
     == csrf_meta_tags
   body
     javascript:
-      var config = {
+      window.config = {
         current_user: #{{ current_user.to_json }}
       };
     header
