--- a/app/views/answers/destroy.js.erb
+++ b/app/views/answers/destroy.js.erb
@@ -1,2 +1,2 @@
 $('.flash').html('<%= j render 'layouts/messages' %>')
-$('.answer-<%= @answer.id %>').remove()
+$('.answer-<%= @answer.id %>').remove();
