User can accept answer. Backbone version

--- a/app/assets/stylesheets/answers.css.scss
+++ b/app/assets/stylesheets/answers.css.scss
@@ -6,5 +6,8 @@
     padding-top: 10px;
     padding-left: 10px;
     border-bottom: solid #F7F7F7 1px;
+    button {
+      outline: none;
+    }
   }
 }
